Added the ejs view engine and a landing page

--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "A REST API for Eze future real estate that returns client data for the company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
-    "api"
+    "api",
+    "real estate"
   ],
   "author": "harrison mweene",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
