--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
-  "devDependencies": {
-    "express": "^5.1.0"
-  }
+    "name": "eze-future-real-estate_api",
+    "version": "0.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js"
+    },
+    "keywords": [],
+    "author": "harrison mweene",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "express": "^5.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    }
 }
