--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-    "name": "eze-future-real-estate_api",
-    "version": "0.0.0",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon index.js"
-    },
-    "keywords": [],
-    "author": "harrison mweene",
-    "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0"
-    },
-    "devDependencies": {
-        "nodemon": "^3.1.10"
-    }
+  "name": "eze-future-real-estate_api",
+  "version": "0.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "harrison mweene",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
